# advent

./: .gitignore  README.md
aoc2024/: Cargo.toml
aoc2024/src/: client.rs  errors.rs
