[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["stream"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
bytes = "1.9.0"
async-stream = "0.3.6"
regex = "1.11.1"

[lib]
name = "aoc2024"
doctest = true
